feature(database):create admin-create staff endpoint [Finishes #165636837]
