# swagger.json
@@ -111,6 +111,78 @@
         }
       }
     },
+    "/user/create": {
+      "post": {
+        "tags": [
+          "Users"
+        ],
+        "description": "Creates a new user",
+        "summary": "User sign up",
+        "operationId": "ApiV1UserCreate",
+        "deprecated": false,
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "user",
+            "description": "The user object",
+            "schema": {
+              "type": "object",
+              "required": [
+                "firstName",
+                "lastName",
+                "email",
+                "password",
+                "isAdmin"
+              ],
+              "properties": {
+                "firstName": {
+                  "type": "string"
+                },
+                "lastName": {
+                  "type": "string"
+                },
+                "email": {
+                  "type": "string"
+                },
+                "password": {
+                  "type": "string"
+                },
+                "isAdmin": {
+                  "type": "boolean"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Account successfully created",
+            "schema": {
+              "$ref": "#/definitions/createUserResponse"
+            },
+            "headers": {}
+          },
+          "400": {
+            "description": "Bad request",
+            "schema": {
+              "$ref": "#/definitions/badRequest"
+            }
+          },
+          "422": {
+            "description": "User already exists (Unprocessible entity)",
+            "schema": {
+              "$ref": "#/definitions/userExists"
+            }
+          }
+        }
+      }
+    },
     "/auth/signin": {
       "post": {
         "tags": [
@@ -474,7 +546,7 @@
           }
         ],
         "description": "Credits a account and creates a transaction entry",
-        "summary": "Creit transaction on an account",
+        "summary": "Credit transaction on an account",
         "operationId": "ApiV1creditAccount",
         "deprecated": false,
         "consumes": [
@@ -807,6 +879,47 @@
         },
         "email": {
           "type": "string"
+        }
+      }
+    },
+    "createUserResponse": {
+      "title": "createUserResponse",
+      "type": "object",
+      "properties": {
+        "status": {
+          "type": "number",
+          "format": "int64"
+        },
+        "data": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/createUser"
+          }
+        }
+      }
+    },
+    "createUser": {
+      "title": "signUp",
+      "type": "object",
+      "properties": {
+        "token": {
+          "type": "string"
+        },
+        "id": {
+          "type": "number",
+          "format": "int64"
+        },
+        "firstname": {
+          "type": "string"
+        },
+        "lastname": {
+          "type": "string"
+        },
+        "email": {
+          "type": "string"
+        },
+        "isAdmin": {
+          "type": "boolean"
         }
       }
     },
